ça rebouge ça re-collisionne, j'ai dompté imgui ???

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,13 @@ include_directories(src/Entities src/Player src/Game ${Windows_SDK_INCLUDE_DIR}/
 
 # add_executable(CMakeSFMLProject src/main.cpp src/Entities/Entity.h)
 file(GLOB_RECURSE sources      src/*.cpp src/*.h)
-add_executable(CMakeSFMLProject ${sources})
+file(GLOB_RECURSE extsources      imgui-sfml-2.6/*.cpp imgui-sfml-2.6/*.h imgui-sfml-2.6/*.hpp)
+add_executable(CMakeSFMLProject ${sources} ${extsources})
+# add_subdirectory("imgui-sfml-2.6")
+
 # add_executable(CMakeSFMLProject src/main.cpp)
 
+target_include_directories(CMakeSFMLProject PRIVATE imgui-sfml-2.6 imgui-sfml-2.6/imgui-1.90.1)
 target_link_libraries(CMakeSFMLProject PRIVATE sfml-graphics)
 target_compile_features(CMakeSFMLProject PRIVATE cxx_std_17)
 
