--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,8 @@
         "ranges": "cpp",
         "span": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.rh": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
